Added code searching + fixed loaders.ini + credits

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,12 +1,27 @@
+[SonicGenerations]
+LoaderVersion=2.4.4
+LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
+[SonicLostWorld]
+LoaderVersion=2.5.1
+LoaderChangeLog="- Raise frame events at Present instead of EndScene, fixes multiple frame calls."
+[SonicForces]
+LoaderVersion=7.7
+LoaderChangeLog="- Relocated some patches."
+[PuyoPuyoTetris2]
+LoaderVersion=2.0
+LoaderChangeLog="- Added signature scanning."
+[Tokyo2020]
+LoaderVersion=2.0
+LoaderChangeLog="- Switched to TenpexModLoader."
+[HE2ModLoader]
+LoaderVersion=1.0
+LoaderChangeLog="- Initial release of HE2ModLoader."
 [Sonic Generations]
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
 [Sonic Lost World]
 LoaderVersion=2.5.1
 LoaderChangeLog="- Raise frame events at Present instead of EndScene, fixes multiple frame calls."
-[HE2ModLoader]
-LoaderVersion=1.0
-LoaderChangeLog="- Initial release of HE2ModLoader."
 [Sonic Forces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches."
