--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,14 +6,13 @@ env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: .\HedgeModManager.sln
 
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: Release
-
 jobs:
   build:
+    name: ${{matrix.configuration}}
     runs-on: windows-latest
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
 
     steps:
     - uses: actions/checkout@v2
@@ -29,9 +28,9 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{matrix.configuration}} ${{env.SOLUTION_FILE_PATH}}
 
     - uses: actions/upload-artifact@v2
       with:
-        name: HedgeModManager
-        path: ${{github.workspace}}\HedgeModManager\bin\Release\net472
+        name: HedgeModManager-${{matrix.configuration}}
+        path: ${{github.workspace}}\HedgeModManager\bin\${{matrix.configuration}}\net472
