Update RainbowModLoader to 1.0.1.

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -16,6 +16,9 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
 LoaderVersion=1.0
 LoaderChangeLog="- Initial release of HE2ModLoader."
+[RainbowModLoader]
+LoaderVersion=1.0.1
+LoaderChangeLog="- Fixed mods not loading when storing ModsDB.ini in a different drive."
 [Sonic Generations]
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
