Update GCL and LCL

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,9 +1,9 @@
 [SonicGenerations]
-LoaderVersion=2.4.4
-LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
+LoaderVersion=2.4.5
+LoaderChangeLog="- Update CommonLoader.\n - Add signature scanning support to codes."
 [SonicLostWorld]
-LoaderVersion=2.5.1
-LoaderChangeLog="- Raise frame events at Present instead of EndScene, fixes multiple frame calls."
+LoaderVersion=2.5.2
+LoaderChangeLog="- Update CommonLoader.\n - Add signature scanning support to codes."
 [SonicForces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches."
@@ -20,11 +20,11 @@ LoaderChangeLog="- Initial release of HE2ModLoader."
 LoaderVersion=1.0.1
 LoaderChangeLog="- Fixed mods not loading when storing ModsDB.ini in a different drive."
 [Sonic Generations]
-LoaderVersion=2.4.4
-LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
+LoaderVersion=2.4.5
+LoaderChangeLog="- Update CommonLoader.\n - Add signature scanning support to codes."
 [Sonic Lost World]
-LoaderVersion=2.5.1
-LoaderChangeLog="- Raise frame events at Present instead of EndScene, fixes multiple frame calls."
+LoaderVersion=2.5.2
+LoaderChangeLog="- Update CommonLoader.\n - Add signature scanning support to codes."
 [Sonic Forces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches."
