Update RainbowModLoader to 1.0.2.

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -17,8 +17,8 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 LoaderVersion=1.0.1
 LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
 [RainbowModLoader]
-LoaderVersion=1.0.1
-LoaderChangeLog="- Fixed mods not loading when storing ModsDB.ini in a different drive."
+LoaderVersion=1.0.2
+LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
 [Sonic Generations]
 LoaderVersion=2.4.5
 LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
