Update HE2ML to v1.0.2

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -14,8 +14,8 @@ LoaderChangeLog="- Added signature scanning."
 LoaderVersion=2.0
 LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
-LoaderVersion=1.0.1
-LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
+LoaderVersion=1.0.2
+LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 [RainbowModLoader]
 LoaderVersion=1.0.3
 LoaderChangeLog="- Fix mods not loading when storing ModsDB.ini in a different directory.\n- Ignore mod.ini errors."
