Update RainbowModLoader to 1.0.4.

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -17,8 +17,8 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 LoaderVersion=1.0.2
 LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 [RainbowModLoader]
-LoaderVersion=1.0.3
-LoaderChangeLog="- Fix mods not loading when storing ModsDB.ini in a different directory.\n- Ignore mod.ini errors."
+LoaderVersion=1.0.4
+LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 [Sonic Generations]
 LoaderVersion=2.4.5
 LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
