--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Add Git hash to resources
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: echo ${{github.sha}} > HedgeModManager/Resources/Version.txt
+
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
 
