Update GCL & LCL

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,9 +1,9 @@
 [SonicGenerations]
-LoaderVersion=2.4.5
-LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
+LoaderVersion=2.4.6
+LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
 [SonicLostWorld]
-LoaderVersion=2.5.2
-LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
+LoaderVersion=2.5.3
+LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
 [SonicForces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches."
@@ -20,11 +20,11 @@ LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 LoaderVersion=1.0.5
 LoaderChangeLog="- Fix mod loading order being swapped."
 [Sonic Generations]
-LoaderVersion=2.4.5
-LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
+LoaderVersion=2.4.6
+LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
 [Sonic Lost World]
-LoaderVersion=2.5.2
-LoaderChangeLog="- Update CommonLoader.\n- Add signature scanning support to codes."
+LoaderVersion=2.5.3
+LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
 [Sonic Forces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches."
