Update RainbowModLoader to 1.0.6 [no ci]

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -17,8 +17,8 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 LoaderVersion=1.0.2
 LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 [RainbowModLoader]
-LoaderVersion=1.0.5
-LoaderChangeLog="- Fix mod loading order being swapped."
+LoaderVersion=1.0.6
+LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [Sonic Generations]
 LoaderVersion=2.4.6
 LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
