Changed splash to be timed Note: Image needs to be updated

--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -52,6 +52,7 @@
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
     <Resource Include="Resources\Graphics\Games\Tokyo2020.png" />
     <Resource Include="Resources\Graphics\icon256.png" />
+    <Resource Include="Resources\Graphics\splash.png" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -113,6 +114,7 @@
     <None Remove="Resources\Graphics\Games\SonicGenerations.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
     <None Remove="Resources\Graphics\Games\Tokyo2020.png" />
+    <None Remove="Resources\Graphics\splash.png" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
