--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -50,6 +50,7 @@
     <Resource Include="Resources\Graphics\Games\SonicForces.png" />
     <Resource Include="Resources\Graphics\Games\SonicGenerations.png" />
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
+    <Resource Include="Resources\Graphics\Games\SonicOrigins.png" />
     <Resource Include="Resources\Graphics\Games\Tokyo2020.png" />
     <Resource Include="Resources\Graphics\icon256.png" />
     <Resource Include="Resources\Graphics\splash.png" />
@@ -113,6 +114,7 @@
     <None Remove="Resources\Graphics\Games\SonicForces.png" />
     <None Remove="Resources\Graphics\Games\SonicGenerations.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
+    <None Remove="Resources\Graphics\Games\SonicOrigins.png" />
     <None Remove="Resources\Graphics\Games\Tokyo2020.png" />
     <None Remove="Resources\Graphics\splash.png" />
   </ItemGroup>
