Updated HiteModLoader to 1.0.3.0

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -20,8 +20,8 @@ LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [HiteModLoader]
-LoaderVersion=1.0.2.1
-LoaderChangeLog="- Added save redirection.\n- Changed how the loader initialises to help prevent lockups when starting the game."
+LoaderVersion=1.0.3.0
+LoaderChangeLog="- Fixed crash when loading custom (Game/Stage)Config file."
 [Sonic Generations]
 LoaderVersion=2.4.6
 LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
