--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -20,8 +20,8 @@ LoaderChangeLog="- Update CommonLoader.\n- Fix codes using signature scanning."
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [HiteModLoader]
-LoaderVersion=1.2.0.0
-LoaderChangeLog="- Updated modding API."
+LoaderVersion=1.3.0.0
+LoaderChangeLog="- Updated modding API.\n- Added option to return to main menu on script error"
 [Sonic Generations]
 LoaderVersion=2.4.6
 LoaderChangeLog="- Load DLLs in reverse order, ensuring correct execution.\n- Fix Sigscan issue in CommonLoader."
