Add Sonic Frontiers detection. [no ci]

--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -48,6 +48,7 @@
     <Resource Include="Resources\Graphics\Games\PuyoPuyoTetris2.png" />
     <Resource Include="Resources\Graphics\Games\SonicColorsUltimate.png" />
     <Resource Include="Resources\Graphics\Games\SonicForces.png" />
+    <Resource Include="Resources\Graphics\Games\SonicFrontiers.png" />
     <Resource Include="Resources\Graphics\Games\SonicGenerations.png" />
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
     <Resource Include="Resources\Graphics\Games\SonicOrigins.png" />
@@ -113,6 +114,7 @@
     <None Remove="Resources\Graphics\Games\PuyoPuyoTetris2.png" />
     <None Remove="Resources\Graphics\Games\SonicColorsUltimate.png" />
     <None Remove="Resources\Graphics\Games\SonicForces.png" />
+    <None Remove="Resources\Graphics\Games\SonicFrontiers.png" />
     <None Remove="Resources\Graphics\Games\SonicGenerations.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
     <None Remove="Resources\Graphics\Games\SonicOrigins.png" />
