--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -14,8 +14,8 @@ LoaderChangeLog="- Added signature scanning."
 LoaderVersion=2.0
 LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
-LoaderVersion=1.1.0
-LoaderChangeLog="- Replaced OnFrame hook to use Present for codes.\n- Added support for Sonic Frontiers."
+LoaderVersion=1.1.1
+LoaderChangeLog="- Fixed issue where save redirection were not working with mods on Sonic Frontiers."
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
