Only compile a build for rewrite branch commits.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Windows Build
 
 on:
   push:
+    branches:
+      - rewrite
     paths-ignore:
       # Ignore code files.
       - 'HedgeModManager/Resources/Codesv2/**'
