--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -14,8 +14,8 @@ LoaderChangeLog="- Added signature scanning."
 LoaderVersion=2.0
 LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
-LoaderVersion=1.1.2
-LoaderChangeLog="- Fix mod load order being reversed.\n-Fix profiles not loading."
+LoaderVersion=1.1.3
+LoaderChangeLog="- Added CommonLoaderAPI.\n- Cache signature scans from codes.\n- Improved compatibility with Special K."
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
