--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Windows Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - rewrite
+    paths-ignore:
+      # Ignore code files.
+      - 'HedgeModManager/Resources/Codesv2/**'
 
 env:
   # Path to the solution file relative to the root of the project.
@@ -15,14 +21,14 @@ jobs:
         configuration: [Debug, Release]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3.3.0
 
     - name: Add Git hash to resources
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: echo ${{github.sha}} > HedgeModManager/Resources/Version.txt
 
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
+      uses: microsoft/setup-msbuild@v1.3.1
 
     - name: Restore NuGet packages
       working-directory: ${{env.GITHUB_WORKSPACE}}
@@ -34,7 +40,7 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{matrix.configuration}} ${{env.SOLUTION_FILE_PATH}}
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3.1.2
       with:
         name: HedgeModManager-${{matrix.configuration}}
         path: ${{github.workspace}}\HedgeModManager\bin\${{matrix.configuration}}\net472
