--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -16,6 +16,11 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
 LoaderVersion=1.1.4
 LoaderChangeLog="- Fixed codes and code mods not working with Sonic Forces."
+
+[HE1ModLoader]
+LoaderVersion=0.9
+LoaderChangeLog="- Initial public release."
+
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
