--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -18,8 +18,8 @@ LoaderVersion=1.1.4
 LoaderChangeLog="- Fixed codes and code mods not working with Sonic Forces."
 
 [HE1ModLoader]
-LoaderVersion=0.9
-LoaderChangeLog="- Initial public release."
+LoaderVersion=0.9.1.0
+LoaderChangeLog="- Fix an error in FindMod API."
 
 [RainbowModLoader]
 LoaderVersion=1.0.6
