Update HE1ML [noci]

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -18,8 +18,8 @@ LoaderVersion=1.1.4
 LoaderChangeLog="- Fixed codes and code mods not working with Sonic Forces."
 
 [HE1ModLoader]
-LoaderVersion=0.9.2.0
-LoaderChangeLog="- Reworked append archive implementation for more stability."
+LoaderVersion=0.9.3.0
+LoaderChangeLog="- Add more API exports."
 
 [RainbowModLoader]
 LoaderVersion=1.0.6
