Updated HE2ModLoader to 1.1.5

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -14,8 +14,8 @@ LoaderChangeLog="- Added signature scanning."
 LoaderVersion=2.0
 LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
-LoaderVersion=1.1.4
-LoaderChangeLog="- Fixed codes and code mods not working with Sonic Forces."
+LoaderVersion=1.1.5
+LoaderChangeLog="- Fix attempt for Frontiers startup issues."
 
 [HE1ModLoader]
 LoaderVersion=0.9.3.0
