--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -18,8 +18,8 @@ LoaderVersion=1.1.5
 LoaderChangeLog="- Fix attempt for Frontiers startup issues."
 
 [HE1ModLoader]
-LoaderVersion=0.9.3.0
-LoaderChangeLog="- Add more API exports."
+LoaderVersion=0.9.4.0
+LoaderChangeLog="- Fix include directory priority."
 
 [RainbowModLoader]
 LoaderVersion=1.0.6
