--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -83,11 +83,9 @@
     <PackageReference Include="gong-wpf-dragdrop">
       <Version>2.3.2</Version>
     </PackageReference>
+    <PackageReference Include="HedgeModManager.CodeCompiler" Version="0.2.9" />
     <PackageReference Include="Markdig">
       <Version>0.25.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
-      <Version>3.10.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="NAudio">
@@ -133,5 +131,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CodeCompiler\" />
   </ItemGroup>
 </Project>
