--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -18,8 +18,8 @@ LoaderVersion=1.1.5
 LoaderChangeLog="- Fix attempt for Frontiers startup issues."
 
 [HE1ModLoader]
-LoaderVersion=0.9.6.0
-LoaderChangeLog="- Fix some # archives not loading from work folder.\n- Fix crash handler not writing dumps.\n- Bind DLC folder for SLW"
+LoaderVersion=0.9.7.0
+LoaderChangeLog="- Fix reversed include directory load order."
 
 [RainbowModLoader]
 LoaderVersion=1.0.6
