Update HE2ModLoader to v1.1.6

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -14,13 +14,11 @@ LoaderChangeLog="- Added signature scanning."
 LoaderVersion=2.0
 LoaderChangeLog="- Switched to TenpexModLoader."
 [HE2ModLoader]
-LoaderVersion=1.1.5
-LoaderChangeLog="- Fix attempt for Frontiers startup issues."
-
+LoaderVersion=1.1.6
+LoaderChangeLog="- Fix 'Enable mod loader' option not applying."
 [HE1ModLoader]
 LoaderVersion=0.9.7.0
 LoaderChangeLog="- Fix reversed include directory load order."
-
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
