Update HE1ML to 0.9.8

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -17,8 +17,8 @@ LoaderChangeLog="- Switched to TenpexModLoader."
 LoaderVersion=1.1.6
 LoaderChangeLog="- Fix 'Enable mod loader' option not applying."
 [HE1ModLoader]
-LoaderVersion=0.9.7.0
-LoaderChangeLog="- Fix reversed include directory load order."
+LoaderVersion=0.9.8.0
+LoaderChangeLog="- Fix append archives not working properly with file bindings."
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
