Updated HML to 1.4.4.1

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,5 +8,5 @@ LoaderChangeLog="- Fix append archives not working properly with file bindings."
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [HiteModLoader]
-LoaderVersion=1.4.4.0
-LoaderChangeLog="- Add support for loading as dinput8 instead of d3d11."
+LoaderVersion=1.4.4.1
+LoaderChangeLog="- Added Sonic 1/2/CD scripts.\nRequires HedgeModManager 7.12-3 or newer."
