Update HE2ModLoader to 1.2.1

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [HE2ModLoader]
-LoaderVersion=1.2.0
-LoaderChangeLog="- Add support for the Epic Games Store version of Sonic Frontiers."
+LoaderVersion=1.2.1
+LoaderChangeLog="- Removed anti-debugging code from Sonic Forces."
 [HE1ModLoader]
 LoaderVersion=0.9.8.0
 LoaderChangeLog="- Fix append archives not working properly with file bindings."
