--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,5 +8,5 @@ LoaderChangeLog="- Fix append archives not working properly with file bindings."
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [HiteModLoader]
-LoaderVersion=1.4.4.2
-LoaderChangeLog="- Updated Sonic CD scripts.\n  - Fixed a minor bug where finishing a special stage in Sonic CD would make the results not display correctly in mirror mode."
+LoaderVersion=1.4.4.3
+LoaderChangeLog="- Updated Sonic 1, 2 and CD scripts."
