Update HE1ML  to 0.10

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=1.2.1
 LoaderChangeLog="- Removed anti-debugging code from Sonic Forces."
 [HE1ModLoader]
-LoaderVersion=0.9.8.0
-LoaderChangeLog="- Fix append archives not working properly with file bindings."
+LoaderVersion=0.10.0.0
+LoaderChangeLog="- Implement append archives for Sonic Lost World.\n- Load Sonic Generations work folder with higher priority.\n- Implement feature to allow mods to restart game with 4GB support.\n- Fix mod filtering issues."
 [RainbowModLoader]
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
