--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,5 +8,5 @@ LoaderChangeLog="- Implement append archives for Sonic Lost World.\n- Load Sonic
 LoaderVersion=1.0.6
 LoaderChangeLog="- Add support for the latest version of the game. (1.0.9)"
 [HiteModLoader]
-LoaderVersion=1.4.4.4
-LoaderChangeLog="- Updated Sonic CD scripts."
+LoaderVersion=1.4.5.0
+LoaderChangeLog="- Changed when the mod loader starts."
