--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -53,6 +53,7 @@
     <Resource Include="Resources\Graphics\Games\SonicGenerations.png" />
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
     <Resource Include="Resources\Graphics\Games\SonicOrigins.png" />
+    <Resource Include="Resources\Graphics\Games\SonicXShadowGenerations.png" />
     <Resource Include="Resources\Graphics\Games\Tokyo2020.png" />
     <Resource Include="Resources\Graphics\icon256.png" />
     <Resource Include="Resources\Graphics\EasterEggs\splashBirthday.png" />
@@ -119,6 +120,7 @@
     <None Remove="Resources\Graphics\Games\SonicGenerations.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
     <None Remove="Resources\Graphics\Games\SonicOrigins.png" />
+    <None Remove="Resources\Graphics\Games\SonicXShadowGenerations.png" />
     <None Remove="Resources\Graphics\Games\Tokyo2020.png" />
     <None Remove="Resources\Graphics\splashBirthday.png" />
   </ItemGroup>
