--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [HE2ModLoader]
-LoaderVersion=1.2.1
-LoaderChangeLog="- Removed anti-debugging code from Sonic Forces."
+LoaderVersion=1.3.0
+LoaderChangeLog="- Added support for Shadow Generations."
 [HE1ModLoader]
 LoaderVersion=0.10.0.0
 LoaderChangeLog="- Implement append archives for Sonic Lost World.\n- Load Sonic Generations work folder with higher priority.\n- Implement feature to allow mods to restart game with 4GB support.\n- Fix mod filtering issues."
