--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -51,8 +51,10 @@
     <Resource Include="Resources\Graphics\Games\SonicForces.png" />
     <Resource Include="Resources\Graphics\Games\SonicFrontiers.png" />
     <Resource Include="Resources\Graphics\Games\SonicGenerations.png" />
+    <Resource Include="Resources\Graphics\Games\SonicGenerations2024.png" />
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
     <Resource Include="Resources\Graphics\Games\SonicOrigins.png" />
+    <Resource Include="Resources\Graphics\Games\SonicXShadowGenerations.png" />
     <Resource Include="Resources\Graphics\Games\Tokyo2020.png" />
     <Resource Include="Resources\Graphics\icon256.png" />
     <Resource Include="Resources\Graphics\EasterEggs\splashBirthday.png" />
@@ -117,8 +119,10 @@
     <None Remove="Resources\Graphics\Games\SonicForces.png" />
     <None Remove="Resources\Graphics\Games\SonicFrontiers.png" />
     <None Remove="Resources\Graphics\Games\SonicGenerations.png" />
+    <None Remove="Resources\Graphics\Games\SonicGenerations2024.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
     <None Remove="Resources\Graphics\Games\SonicOrigins.png" />
+    <None Remove="Resources\Graphics\Games\SonicXShadowGenerations.png" />
     <None Remove="Resources\Graphics\Games\Tokyo2020.png" />
     <None Remove="Resources\Graphics\splashBirthday.png" />
   </ItemGroup>
