--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -54,7 +54,7 @@
     <Resource Include="Resources\Graphics\Games\SonicGenerations2024.png" />
     <Resource Include="Resources\Graphics\Games\SonicLostWorld.png" />
     <Resource Include="Resources\Graphics\Games\SonicOrigins.png" />
-    <Resource Include="Resources\Graphics\Games\SonicXShadowGenerations.png" />
+    <Resource Include="Resources\Graphics\Games\ShadowGenerations.png" />
     <Resource Include="Resources\Graphics\Games\Tokyo2020.png" />
     <Resource Include="Resources\Graphics\icon256.png" />
     <Resource Include="Resources\Graphics\EasterEggs\splashBirthday.png" />
@@ -122,7 +122,7 @@
     <None Remove="Resources\Graphics\Games\SonicGenerations2024.png" />
     <None Remove="Resources\Graphics\Games\SonicLostWorld.png" />
     <None Remove="Resources\Graphics\Games\SonicOrigins.png" />
-    <None Remove="Resources\Graphics\Games\SonicXShadowGenerations.png" />
+    <None Remove="Resources\Graphics\Games\ShadowGenerations.png" />
     <None Remove="Resources\Graphics\Games\Tokyo2020.png" />
     <None Remove="Resources\Graphics\splashBirthday.png" />
   </ItemGroup>
